syntax = "proto3";

package asgt.dataservice.v1alpha1;

option go_package = "dataservice";

import "google/api/annotations.proto";
import "asgt/type/dataset.proto";
import "asgt/type/transaction.proto";
import "asgt/type/target_value.proto";

service DataService {
  rpc CreateDataset (CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/{dataset_type}/{dataset_name}:create"
      body: "*"
    };
  }

  rpc AppendData (AppendDataRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/{dataset_type}/{dataset_name}:append"
      body: "*"
    };
  }

  rpc DeleteData (DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/{dataset_type}/{dataset_name}:delete"
      body: "*"
    };
  }

  rpc GetBankInfo (GetInfoRequest) returns (GetInfoResponse) {
    option (google.api.http) = {
      post: "/v1alpha1/{dataset_type}/{dataset_name}:info"
      body: "*"
    };
  }

  rpc GetDataset (GetDatasetRequest) returns (GetDatasetResponse);
}


message EntryInput {
  asgt.type.Transaction data = 1;
  repeated asgt.type.TargetValue target_values = 2;
}

message CreateRequest {
  string dataset_name = 1;
  string dataset_type = 2;
  repeated string tags = 3;
  repeated string targets = 6;
  repeated EntryInput entries = 4;
  asgt.type.RetentionPolicy retention_policy = 5;
}

message AppendDataRequest {
  string dataset_name = 1;
  string dataset_type = 2;
  repeated EntryInput entries = 3;
}


message GetDatasetRequest {
  string consumer = 1;
  string dataset_name = 2;
  string dataset_type = 3;
}

message GetDatasetResponse {
  asgt.type.Dataset dataset = 1;
}
